--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-debug-toolbar==4.0.0
 django-rest-swagger==2.2.0
 djangorestframework==3.15.2
 django-redis
+drf-yasg
 Faker==26.0.0
 python-dotenv==0.16.0
 pytest-django==4.8.0
